--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha test/*.js",
     "start": "node index.js"
   },
   "author": "",
@@ -12,5 +12,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "read-last-lines": "^1.8.0"
+  },
+  "devDependencies": {
+    "mocha": "^8.4.0"
   }
 }
